fix overlap issue

--- a/css/snake.css
+++ b/css/snake.css
@@ -9,6 +9,13 @@ body {
   /*background: #FFDA91;*/
   background-image: url('background.jpg');
   background-size: cover;
+  background-repeat: no-repeat;
+  font-family: 'Audiowide', cursive;
+  height: 100%;
+}
+
+html {
+  height: 100%;
 }
 
 
@@ -77,6 +84,7 @@ header {
 }
 
 .game-board {
+  margin: 10px 0 ;
   position: relative;
   float:left;
   background: #343537;
@@ -84,20 +92,20 @@ header {
 
 .retry {
   position: absolute;
-  color: white;
+  color: black;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  background: red;
+  background: #33ed25;
   padding: 15px;
   font-size: 28px;
-  border: 1px solid white;
+  border: 1px solid black;
   border-radius: 5px;
   cursor: pointer;
 }
 
 .score {
-  color: white;
+  color: black;
   text-align: center;
   font-size: 24px;
   background: #BBBBBB;
